shop App Add and Login, Logout System Add To Project.

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,7 +1,9 @@
 {% block content %}
 
-<p>
-    Login Page
-</p>
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" class="btn btn-primary" value="Login">
+</form>
 
 {% endblock %}
