--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -1,12 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="navbar-nav">
-        <a class="nav-link" href="{% url 'posts:posts' %}">Home</a>
+        <a class="nav-link" href="">Home</a>
         {% if request.user.is_authenticated %}
-        <a class="nav-link" href="{% url 'account:logout' %}">Logout</a>
+        <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
         {% else %}
-        <a class="nav-link" href="{% url 'account:login' %}">Login</a>
-        <a class="nav-link" href="{% url 'account:phone_login' %}">Login Phone</a>
-        <a class="nav-link" href="{% url 'account:register' %}">Register</a>
+        <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
+        <a class="nav-link" href="">Register</a>
         {% endif %}
       </div>
     </div>
