--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -5,7 +5,7 @@
         <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
         {% else %}
         <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
-        <a class="nav-link" href="">Register</a>
+        <a class="nav-link" href="{% url 'accounts:register' %}">Register</a>
         {% endif %}
       </div>
     </div>
