--- a/shop/templates/shop/all_products.html
+++ b/shop/templates/shop/all_products.html
@@ -5,6 +5,12 @@
 
 {% block content %}
 
+<div class="category">
+  {% for category in categories %}
+  <a href="{{ category.get_absolute_url }}" class="btn btn-primary">{{ category.name }}</a>
+  {% endfor %}
+</div><br><br><br>
+
 <ul class="card-wrapper">
     {% for product in products %}
     <li class="card">
@@ -15,6 +21,6 @@
       <p>{{ product.description | truncatechars:50 }}</p>
     </li>
     {% endfor %}
-  </ul>
+</ul>
 
 {% endblock %}
