--- a/shop/templates/shop/all_products.html
+++ b/shop/templates/shop/all_products.html
@@ -7,7 +7,20 @@
 
 <div class="category">
   {% for category in categories %}
-  <a href="{{ category.get_absolute_url }}" class="btn btn-primary">{{ category.name }}</a>
+
+    
+      <div class="btn-group">
+        <a href="{{ category.get_absolute_url }}" id="btnGroupDrop1" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" >
+          {{ category.name }}
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+          <li>
+            {% for nested in category.nested_category.all %}
+            <a class="dropdown-item" href="{{ nested.get_absolute_url }}">{{ nested.name }}</a>
+            {% endfor %}
+          </li>
+        </ul>
+      </div>
   {% endfor %}
 </div><br><br><br>
 
