--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="navbar-nav">
         <a class="nav-link" href="{% url 'shop:all_product'%}">Home</a>
+        <a class="nav-link" href="{% url 'cart:cart_detail'%}">Cart</a>
         {% if request.user.is_authenticated %}
         <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
         {% else %}
