Add Remove Feature For Cart.

--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -11,6 +11,7 @@
         <th scope="col">Quantity</th>
         <th scope="col">Unit Price</th>
         <th scope="col">Total Price</th>
+        <th scope="col">Remove</th>
     </tr>
     </thead>
     <tbody>
@@ -21,12 +22,13 @@
         <td>{{ item.quantity }}</td>
         <td>{{ item.price }}</td>
         <td>{{ item.total_price }}</td>
+        <td><a href="{% url 'cart:cart_remove' item.product.id %}" class="btn btn-danger">Remove</a></td>
     </tr>
     {% endfor %}
     <tr>
         <td>Total</td>
         <td colspan="3"></td>
-        <td>800</td>
+        <td>{{ cart.get_total_price }}</td>
     </tr>
     </tbody>
 </table>
