--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -32,6 +32,8 @@
     </tr>
     </tbody>
 </table>
+
+<a href="{% url 'order:order_create' %}" class="btn btn-primary">Check out</a>
   
 
 {% endblock %}
